# FoDS_Practicals

./: README.md  pyproject.toml
Notebooks/: 2code_skeleton_industry_classification.ipynb  3code_skeleton_industry_classification.ipynb  Practical2_skeleton_olat.ipynb  code_skeleton_industry_classification.ipynb  pandas.ipynb  pyproject.toml  pyvenv.cfg
